Horizontal overflow fixed

--- a/src/app/home/head/head.component.css
+++ b/src/app/home/head/head.component.css
@@ -1,12 +1,10 @@
 .image{
     width:100%;
-    height: 60%;
+    height: auto;
     display: flex;
     background-position: center;
     background-size: cover;
     background-image: url('../../../assets/images/cover-image.jpg');
-    box-shadow: 0 5px 10px 7px rgba(150, 70, 5, 5)!important;
-
 
 }
 
